# VulkanPlayground

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
assets/models/Cube/: Cube.gltf
assets/models/bvhDemo/: bvhDemo.gltf
assets/models/bvhStressTest/: ring_scene.gltf
assets/shaders/: Bounds.frag  Bounds.vert  ClothSim.comp  Frustum.frag  Frustum.vert  FullScreenQuadFrag.frag  FullScreenQuadVert.vert  Mandlebrot.comp  UnlitColor.frag  UnlitColor.vert  UnlitTextured.frag  UnlitTextured.vert
cmake/: vcpkg.cmake
docs/: GammaCorrection.txt  TextureFormats.md
source/app/bvhDemo/: CMakeLists.txt
source/app/bvhDemo/src/: main.cpp
source/app/gltf/: CMakeLists.txt
source/app/gltf/src/: main.cpp
source/app/pbr/: CMakeLists.txt
source/app/pbr/src/: main.cpp
source/engine/: CMakeLists.txt
source/engine/inc/: Assertion.h  BoundsManager.h  Camera.h  Common.h  Components.h  Defines.h  EngineManager.h  Event.h  EventBus.h  FrustumCuller.h  GltfLoader.h  ImguiEditor.h  ImguiGlfwHelper.h  ImguiUtil.h  MaterialManager.h  Mesh.h  RenderData.h  SceneManager.h  SceneNode.h  TextureManager.h  TimelineSemaphore.h  Timer.h  Utils.h  ValidationManager.h  VulkanManager.h  VulkanWrappers.h  WindowManager.h  WireFrameTask.h
source/engine/inc/imgui/: ImguiEditor.h  ImguiSystem.h  RenderToImguiTexture.h
source/engine/inc/input/: InputManager.h  MouseInputManager.h
source/engine/inc/math/: Cube.h  Frustum.h  MathUtil.h  Plane.h  Quad.h  Sphere.h  TangentCalculator.h
source/engine/inc/memory/: LinearPoolAllocator.h  MemoryManager.h  MemoryUtils.h  StackPoolAllocator.h
source/engine/inc/pipelines/: BvhRenderPipeline.h  Pipeline.h  WireframePipeline.h
source/engine/inc/tasks/: BoundsRenderTask.h  ColorUnlitTask.h  FrustumRenderTask.h  Task.h  WireFrameTask.h
source/engine/src/: Assertion.cpp  BoundsManager.cpp  Camera.cpp  EngineManager.cpp  EventBus.cpp  FrustumCuller.cpp  GltfLoader.cpp  ImguiEditor.cpp  ImguiUtil.cpp  MaterialManager.cpp  SceneManager.cpp  SceneNode.cpp  TextureManager.cpp  Utils.cpp  ValidationManager.cpp  VulkanManager.cpp  WindowManager.cpp  WireFrameTask.cpp
source/engine/src/imgui/: ImguiEditor.cpp  ImguiSystem.cpp
source/engine/src/input/: InputManager.cpp  InputManagerGLFW.cpp
source/engine/src/math/: Frustum.cpp  MathUtil.cpp  Plane.cpp
source/engine/src/memory/: LinearPoolAllocator.cpp  MemoryManager.cpp  StackPoolAllocator.cpp
source/engine/src/pipelines/: BvhRenderPipeline.cpp  Pipeline.cpp  WireframePipeline.cpp
source/engine/src/tasks/: BoundsRenderTask.cpp  ColorUnlitTask.cpp  FrustumRenderTask.cpp  Task.cpp  WireFrameTask.cpp
tools/: GenerateRingScene.py
